--- a/pari_dispari/index.html
+++ b/pari_dispari/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- codice js -->
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
