--- a/parole_palindrome/index.html
+++ b/parole_palindrome/index.html
@@ -8,6 +8,6 @@
 <body>
     
     <!-- codice js -->
-     <script type="text/javascript" src="main.js"></script>
+     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
