feat: add condition to check palindrome words

--- a/parole_palindrome/index.html
+++ b/parole_palindrome/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     
+    <!-- messaggio -->
+    <h1 id="text"></h1>
+
     <!-- codice js -->
      <script type="text/javascript" src="js/main.js"></script>
 </body>
