feat: add stamp message in DOM

--- a/pari_dispari/index.html
+++ b/pari_dispari/index.html
@@ -9,6 +9,9 @@
 
 <body>
 
+    <!-- messaggio -->
+    <h1 id="messaggio"></h1>
+
     <!-- codice js -->
     <script type="text/javascript" src="js/main.js"></script>
 </body>
